improve of the menu and some things about the bags

--- a/styles/naheulbeuk.css
+++ b/styles/naheulbeuk.css
@@ -26,7 +26,7 @@
 
 #characterResume {
     width: auto !important;
-    padding-top: 5px;
+    padding-top: 36px;
     /* padding-right: 5px; */
     right: 105px;
     position: absolute;
@@ -56,7 +56,7 @@
 
 #characterAbilities {
     padding: 5px;
-    top: 185px;
+    top: 220px;
     left: 0px;
     position: absolute;
     display: inline-block;
@@ -494,20 +494,7 @@ textarea {
     padding: 3px;
 }
 
-#spellBookSheet {
-    display: none;
-}
-
-#characterSkillsSheet {
-    display: none;
-}
-
-#characterBagsSheet {
-    display: none;
-}
-
 #characterSettingsSheet {
-    display: none;
     overflow-y: scroll !important;
 }
 
@@ -707,4 +694,20 @@ table#characterObjectBagTable td img {
 #objectSheetForm img {
     border: dashed 2px #277c00;
     background-color: #97ff8e;
+}
+
+.itemNav {
+    text-align: center;
+}
+
+table#spellBookSheet td {
+    max-width: 150px;
+    text-align: center;
+}
+
+table#spellBookSheet td img {
+    height: 50px;
+    width: 50px;
+    border: dashed 2px #ff9711;
+    background-color: #ffbc65;
 }
