--- a/templates/partials/character-information-sheet.hbs
+++ b/templates/partials/character-information-sheet.hbs
@@ -4,7 +4,6 @@
         <input class="caption" value="{{actor.name}}" />
     </div>
     <div id="characterResume">
-        <span class="title">FICHE DE HÉROS </span>
         <table>
             <tr>
                 <td>Origine: </td>
@@ -28,11 +27,9 @@
     </div>
 </div>
 <div id="characterAbilities">
-
-    <span class="title">Caractéristiques </span>
     <table>
         <tr>
-            <th></th>
+            <th>Caract</th>
             <th>Tot.</th>
             <th>Base</th>
             <th>Eq</th>
