--- a/templates/partials/character-spell-book.hbs
+++ b/templates/partials/character-spell-book.hbs
@@ -1,6 +1,6 @@
 <h1><i class="fas fa-journal-whills"></i> Grimoires de magie </h1>
 
-<table>
+<table id="spellBookSheet">
     <tr>
         <th></th>
         <th>Ecole</th>
