--- a/templates/partials/character-bags-sheet.hbs
+++ b/templates/partials/character-bags-sheet.hbs
@@ -1,4 +1,4 @@
-<h1><i class="fas fa-journal-whills"></i> Compétences</h1>
+<h1><i class="fas fa-journal-whills"></i> Sacs</h1>
 
 <table id="characterObjectBagTable">
     <tr>
