--- a/templates/sheets/spell-sheet.hbs
+++ b/templates/sheets/spell-sheet.hbs
@@ -37,39 +37,51 @@
             value="{{data.castAOE}}" data-dtype="Number" /> <span id="afterAOE">Assauts</span>
     </div>
     <div id="spellDescription">
-        <button disabled class="active" id="buttonDescription">Description</button>
-        <button id="buttonEffect">Effet</button>
-        <button id="buttonNote">Note</button>
-        <button id="buttonSettings"><i class="fas fa-cogs"></i></button>
-        <textarea id="description" name="data.description">{{data.description}}</textarea>
-        <textarea id="effect" name="data.effect">{{data.effect}}</textarea>
-        <textarea id="note" name="data.note">{{data.note}}</textarea>
-        <div id="settingsSpells">
-            <table>
-                <tr>
-                    <td><span>Confrontation/Epreuve</span></td>
-                    <td>
-                        <select name="data.testWith">
-                            {{#select data.testWith}}
-                            {{#each config.ability as |name type|}}
-                            <option value="{{type}}">{{localize name}}</option>
-                            {{/each}}
-                            {{/select}}
-                        </select>
-                        <input id="diceTextInput" name="data.testMod" type="text" value="{{data.testMod}}"
-                            data-dtype="Number" />
-                    </td>
-                </tr>
-                <tr>
-                    <td><span>Dégats</span></td>
-                    <td> <input id="diceDamageInput" name="data.damage" type="text" value="{{data.damage}}"
-                            data-dtype="String" />
-                    </td>
-                    <td><span>PI ?</span><input type="checkbox" name="data.checkPI" {{checked data.checkPI}}></td>
-                    <td><span>PS ?</span><input type="checkbox" name="data.checkPS" {{checked data.checkPS}}></td>
-                </tr>
-            </table>
+        <nav class="sheet-tabs tabs" data-group="primary-tabs">
+            {{!-- <div id="buttonsCharacterSheet"> --}}
+                <a class="itemNav" data-tab="description"><i class="fas fa-user"></i> Description</a>
+                <a class="itemNav" data-tab="effect"><i class="fas fa-journal-whills"></i> Effet</a>
+                <a class="itemNav" data-tab="note"><i class="fas fa-journal-whills"></i> Note</a>
+                <a class="itemNav" data-tab="settings"><i class="fas fa-cogs"></i></a>
+        </nav>
 
-        </div>
+
+        <section class="sheet-body">
+            <div class="tab" data-tab="description" data-group="primary-tabs">
+                <textarea name="data.description">{{data.description}}</textarea>
+            </div>
+            <div class="tab" data-tab="effect" data-group="primary-tabs">
+                <textarea name="data.effect">{{data.effect}}</textarea>
+            </div>
+            <div class="tab" data-tab="note" data-group="primary-tabs">
+                <textarea name="data.note">{{data.note}}</textarea>
+            </div>
+            <div class="tab" data-tab="settings" data-group="primary-tabs">
+                <table>
+                    <tr>
+                        <td><span>Confrontation/Epreuve</span></td>
+                        <td>
+                            <select name="data.testWith">
+                                {{#select data.testWith}}
+                                {{#each config.ability as |name type|}}
+                                <option value="{{type}}">{{localize name}}</option>
+                                {{/each}}
+                                {{/select}}
+                            </select>
+                            <input id="diceTextInput" name="data.testMod" type="text" value="{{data.testMod}}"
+                                data-dtype="Number" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><span>Dégats</span></td>
+                        <td> <input id="diceDamageInput" name="data.damage" type="text" value="{{data.damage}}"
+                                data-dtype="String" />
+                        </td>
+                        <td><span>PI ?</span><input type="checkbox" name="data.checkPI" {{checked data.checkPI}}></td>
+                        <td><span>PS ?</span><input type="checkbox" name="data.checkPS" {{checked data.checkPS}}></td>
+                    </tr>
+                </table>
+
+            </div>
     </div>
 </form>
