--- a/templates/partials/character-information-sheet.hbs
+++ b/templates/partials/character-information-sheet.hbs
@@ -303,7 +303,7 @@
     </table>
 </div>
 <div id="characterEquipment">
-    <img src="systems/naheulbeuk/pictures/silhouette.svg" alt="">
+    <img src="systems/naheulbeuk/pictures/{{data.bg_image}}" alt="">
 </div>
 <div id="characterItems">
     <h3>Equipement</h3>
