--- a/templates/sheets/armor-sheet.hbs
+++ b/templates/sheets/armor-sheet.hbs
@@ -45,6 +45,8 @@
             <th>FO</th>
             <th>PI</th>
             <th>PS</th>
+            <th>Mod.AT</th>
+            <th>Mod.PRD</th>
 
         </tr>
         <tr>
@@ -56,6 +58,8 @@
             <td><input name="data.abilities.FO" type="text" value="{{data.abilities.FO}}" data-dtype="Number" /></td>
             <td><input name="data.abilities.PI" type="text" value="{{data.abilities.PI}}" data-dtype="Number" /></td>
             <td><input name="data.abilities.PS" type="text" value="{{data.abilities.PS}}" data-dtype="Number" /></td>
+            <td><input name="data.modAT" type="text" value="{{data.modAT}}" data-dtype="Number" /></td>
+            <td><input name="data.modPRD" type="text" value="{{data.modPRD}}" data-dtype="Number" /></td>
         </tr>
     </table>
     {{/if}}
